--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
 	<div class="btn-group-vertical">
     	<input type=button onClick="location.href='calculate.html'" class="btn" value="CALCULATE BMI">
-    	<input type=button onClick="location.href='performance.html'" class="btn" value="PERFORMANCE">
+    	<input type=button onClick="location.href='progress_update.html'" class="btn" value="PERFORMANCE">
     	<input type=button onClick="location.href='advice.php'" class="btn" value="NUTRITIONAL ADVICE">
 	</div>
 
