--- a/progress_update.html
+++ b/progress_update.html
@@ -4,7 +4,7 @@
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
     <title>ChartJS - Line</title>
-    <link href="css/default.css" rel="stylesheet">
+    <link href="default.css" rel="stylesheet">
     <style>
       .performance {
         color: #ffffff;
@@ -40,10 +40,10 @@
   </div>
 
   <!-- javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/Chart.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="Chart.min.js"></script>
 
-    <script src="js/line-db-php.js"></script>
+    <script src="line-db-php.js"></script>
 
   <div class="performance-group-vertical">
     <input type=button onClick="location.href='home.html'" class="performance" value="HOME">
