--- a/calculate.html
+++ b/calculate.html
@@ -9,7 +9,7 @@
 	<h2>Click "CALCULATE" when ready.</h2>
 
 	<div class="calc-group-vertical">
-    	<input type=button onClick="location.href='192.168.137.60'" class="calc" value="CALCULATE">
+    	<input type=button onClick="location.href='192.168.137.60'" class="calc" value="CALCULATE saya tambah sikit">
 	</div>
 
 </body>
