--- a/progress_update.html
+++ b/progress_update.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-    <title>ChartJS - Line</title>
+    <title>Performance Tracker</title>
     <link href="default.css" rel="stylesheet">
     <style>
       .performance {
