Update and rename calculate.php to calculate.html

--- a/calculate.html
+++ b/calculate.html
@@ -1,4 +1,3 @@
-<?php include ('config.php')?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,12 +9,9 @@
 	<h2>Click "CALCULATE" when ready.</h2>
 
 	<div class="calc-group-vertical">
-    	<input type=button onClick="location.href='192.168.137.60'" href="<?php echo ROOT_URL; ?>" class="calc" value="CALCULATE">
+    	<input type=button onClick="location.href='192.168.137.60'"  class="calc" value="CALCULATE">
 	</div>
 
-<?php
-echo 'This is Calculate Page';
-?>
 
 </body>
 </html>
