--- a/progress_update.html
+++ b/progress_update.html
@@ -1,4 +1,3 @@
-<?php include ('config.php')?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -47,10 +46,8 @@
     <script src="line-db-php.js"></script>
 
   <div class="performance-group-vertical">
-    <input type=button onClick="location.href='home.php'" href="<?php echo ROOT_URL; ?>"class="performance" value="HOME">
+    <input type=button onClick="location.href='home.php'" class="performance" value="HOME">
   </div>
-<?php
-echo 'This is Performance Page';
-?>
+
 </body>
 </html>
